hphp/test/zend/bad/bug36268.php.exp
HipHop Fatal error: Call to undefined function bar() in %sbug36268.php on line 8
